fix(todo list): fix layout issues with the auto-expanding textareas

--- a/src/components/board/column/card/styles.css
+++ b/src/components/board/column/card/styles.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-flow: row;
     gap: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     padding: 0;
 
     & .card__isComplete {
@@ -92,20 +92,20 @@
     & textarea {
       grid-area: 1 / 1 / 2 / 2;
       line-height: 2rem;
-      padding: 0;
     }
   }
 
   & .card__textarea-wrapper-title::after,
   & .card__title {
-    margin-bottom: 1rem;
+    margin: 0 0 .5rem 0;
+    padding: .5rem 0;
     font-size: 2rem;
     font-weight: bold; 
   }
 
   & .card__textarea-wrapper-description::after,
   & .card__description {
-    margin-bottom: 2rem;
+    padding: 0;
     font-size: 1.5rem;
     color: var(--dark-grey);
   }
@@ -115,6 +115,7 @@
     flex-flow: row;
     gap: 2rem;
     justify-content: center;
+    margin-top: 2rem;
 
     & button {
       height: 2rem;
